--- a/contato.html
+++ b/contato.html
@@ -44,9 +44,9 @@
                     <div class="participante">
                         <h3>Pedro Vinchi</h3>
                         <p>
-                            <a href="https://github.com/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
-                            <a href="https://www.linkedin.com/in//" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
-                            <a href="mailto:email@example.com"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
+                            <a href="https://pedrovinchi1.github.io/CV/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
+                            <a href="www.linkedin.com/in/pedrovinchi" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
+                            <a href="mailto:pedrovinchih9982@gmail.com"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
                         </p>
                     </div>
 
@@ -54,9 +54,9 @@
                     <div class="participante">
                         <h3>João Pedro Paes</h3>
                         <p>
-                            <a href="https://github.com/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
-                            <a href="https://www.linkedin.com/in//" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
-                            <a href="mailto:email@example.com"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
+                            <a href="https://github.com/joao-Paes" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
+                            <a href="https://www.linkedin.com/in/joaopedropaes/" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
+                            <a href="mailto:joao.020602@alunos.utfpr.edu.br"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
                         </p>
                     </div>
                 </div>
