--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     
     <!-- Header -->
     <header>
+        <div class="tradutor">
+            <div id="google_translate_element"></div>
+                <script type="text/javascript">
+                function googleTranslateElementInit() {
+                  new google.translate.TranslateElement(
+                    {pageLanguage: 'pt', includedLanguages: 'en,es,fr,it,de,ko,ru,zh-TW', layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL},
+                    'google_translate_element'
+                  );
+                }
+                </script>
+                <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        </div>
         <h1>Educação para Todos</h1>
         <nav>
             <ul>
