--- a/sobre.html
+++ b/sobre.html
@@ -77,7 +77,7 @@
         <!-- Footer -->
         <footer>
             <p>© 2024 Educação para Todos</p>
-            <p><a href="contato.html">Nosso Time</a> | <a href="contato.html">Contato</a></p>
+            <p><a href="https://mucarii.github.io/">Murilo</a> | <a href="https://mucarii.github.io/">Pedro</a></p> | <a href="https://github.com/joao-Paes/">João</a></p>
         </footer>
     </div>
 
