--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,7 @@
                     <div class="participante">
                         <h3>Murilo Calore</h3>
                         <p>
-                            <a href="https://github.com/mucarii" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
+                            <a href="https://mucarii.github.io/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
                             <a href="https://www.linkedin.com/in/murilo-ritto/" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
                             <a href="mailto:murilo.l.calore.r@gmail.com"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
                         </p>
@@ -56,7 +56,7 @@
                     <div class="participante">
                         <h3>Pedro Vinchi</h3>
                         <p>
-                            <a href="https://pedrovinchi1.github.io/CV/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
+                            <a href="https://mucarii.github.io/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
                             <a href="www.linkedin.com/in/pedrovinchi" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
                             <a href="mailto:pedrovinchih9982@gmail.com"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
                         </p>
@@ -78,7 +78,7 @@
         <!-- Footer -->
         <footer>
             <p>© 2024 Educação para Todos</p>
-            <p><a href="#">Nosso Time</a> | <a href="#">Contato</a></p>
+            <p><a href="https://mucarii.github.io/">Murilo</a> | <a href="https://mucarii.github.io/">Pedro</a></p> | <a href="https://github.com/joao-Paes/">João</a></p>
         </footer>
     </div>
 
