--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         <!-- Footer -->
         <footer>
             <p>© 2024 Educação para Todos</p>
+            <div class="curriculo">
             <p><a href="https://mucarii.github.io/">Murilo</a> | <a href="https://mucarii.github.io/">Pedro</a></p> | <a href="https://github.com/joao-Paes/">João</a></p>
+            </div>
         </footer>
     </div>
 
