--- a/sobre.html
+++ b/sobre.html
@@ -78,7 +78,7 @@
         <footer>
             <p>© 2024 Educação para Todos</p>
             <div class="curriculo">
-            <p><a href="https://mucarii.github.io/">Murilo</a> | <a href="https://mucarii.github.io/">Pedro</a></p> | <a href="https://github.com/joao-Paes/">João</a></p>
+            <p><a href="https://mucarii.github.io/">Murilo</a> | <a href="https://pedrovinchi1.github.io/CV/">Pedro</a></p> | <a href="https://github.com/joao-Paes/">João</a></p>
             </div>
         </footer>
     </div>
