--- a/contato.html
+++ b/contato.html
@@ -57,7 +57,7 @@
                         <h3>Pedro Vinchi</h3>
                         <p>
                             <a href="https://pedrovinchi1.github.io/CV/" target="_blank"><img src="img/github-icon.png" alt="GitHub" class="icon"> GitHub</a> | 
-                            <a href="www.linkedin.com/in/pedrovinchi/" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
+                            <a href="https://www.linkedin.com/in/pedrovinchi/" target="_blank"><img src="img/linkedin-icon.png" alt="LinkedIn" class="icon"> LinkedIn</a> | 
                             <a href="mailto:pedrovinchih9982@gmail.com"><img src="img/email-icon.png" alt="Email" class="icon"> Email</a>
                         </p>
                     </div>
