--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Educação para Todos</title>
-    <link rel="stylesheet" href="css/styles.css">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Educação para Todos - Cursos gratuitos e acessíveis para todos, promovendo a inclusão e o aprendizado online.">
         <title>Educação para Todos</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     
     <!-- Header -->
@@ -35,6 +30,7 @@
                 <li><a href="cursos.html" title="Descubra nossos cursos gratuitos">Cursos</a></li>
                 <li><a href="cadastro.html" title="Inscreva-se para os cursos">Cadastro</a></li>
                 <li><a href="contato.html" title="Entre em contato conosco">Contato</a></li>
+                <li><a href="admin.html" title="Área administrativa">Admin</a></li> <!-- Novo item de menu -->
             </ul>
         </nav>
     </header>
@@ -71,6 +67,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
