--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre - Educação para Todos</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 
@@ -82,6 +82,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
