correcao pagina admin

--- a/admin.html
+++ b/admin.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Área administrativa para cadastro de usuários">
-    <title>Admin - Educação para Todos</title>
+    <title>Área Administrativa</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-
     <div class="container">
-        <!-- Header -->
         <header>
             <div class="tradutor">
                 <div id="google_translate_element"></div>
@@ -28,31 +27,42 @@
             </nav>
         </header>
 
-        <!-- Main -->
-        <main class="main-content">
+        <main>
             <section class="cadastro">
                 <h2>Cadastro de Usuários</h2>
-                <p>Registre novos usuários para ter acesso aos nossos cursos e ao conteúdo exclusivo do projeto "Educação para Todos".</p>
+                
+                <!-- Campo de Pesquisa -->
+                <div class="pesquisa-container">
+                    <input type="text" id="pesquisa" placeholder="Pesquisar usuários...">
+                </div>
 
+                <!-- Formulário de Cadastro -->
                 <form id="form-cadastro" class="form-cadastro">
-                    <label for="nome">Nome Completo:</label>
-                    <input type="text" id="nome" name="nome" required>
+                    <div class="form-group">
+                        <label for="nome">Nome do Usuário:</label>
+                        <input type="text" id="nome" required>
+                    </div>
 
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <div class="form-group">
+                        <label for="email">E-mail:</label>
+                        <input type="email" id="email" required>
+                    </div>
 
-                    <button type="submit" class="btn">Cadastrar</button>
-                    <button type="button" id="limpar-campos" class="btn">Limpar Campos</button>
+                    <div class="botoes">
+                        <button type="submit" class="btn btn-primary">Cadastrar</button>
+                        <button type="button" id="limpar-campos" class="btn">Limpar Campos</button>
+                        <button type="button" id="limpar-lista" class="btn btn-danger">Limpar Lista</button>
+                    </div>
                 </form>
 
-                <h3>Usuários Cadastrados</h3>
-                <input type="text" id="pesquisa" placeholder="Pesquisar...">
-                <button type="button" id="limpar-lista" class="btn">Limpar Lista</button>
-                <ul id="lista-usuarios"></ul>
+                <!-- Lista de Usuários -->
+                <div class="lista-container">
+                    <h3>Usuários Cadastrados</h3>
+                    <ul id="lista-usuarios"></ul>
+                </div>
             </section>
         </main>
 
-        <!-- Footer -->
         <footer>
             <p>© 2024 Educação para Todos</p>
             <div class="curriculo">
@@ -64,7 +74,7 @@
         </footer>
     </div>
 
-    <!-- JavaScript -->
     <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/admin.js"></script>
 </body>
 </html>
