--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="cursos.html" title="Descubra nossos cursos gratuitos">Cursos</a></li>
                 <li><a href="cadastro.html" title="Inscreva-se para os cursos">Cadastro</a></li>
                 <li><a href="contato.html" title="Entre em contato conosco">Contato</a></li>
-                <li><a href="admin.html" title="Área administrativa">Admin</a></li> <!-- Novo item de menu -->
+                <li><a href="admin.html" title="Área administrativa">Admin</a></li>
             </ul>
         </nav>
     </header>
