--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
                 <p>Inscreva-se agora e comece a aprender gratuitamente! Nossos cursos estão esperando por você.</p>
                 <a href="cadastro.html" class="cta-button">Inscreva-se Agora</a>
             </section>
-
         </div>
 
         <!-- Footer -->
         <footer>
             <p>© 2024 Educação para Todos</p>
             <div class="curriculo">
-            <p><a href="https://mucarii.github.io/">Murilo</a> | <a href="https://pedrovinchi1.github.io/CV/">Pedro</a></p> | <a href="https://github.com/joao-Paes/">João</a></p>
+                <p><a href="https://mucarii.github.io/">Murilo</a> | 
+                   <a href="https://pedrovinchi1.github.io/CV/">Pedro</a> | 
+                   <a href="https://github.com/joao-Paes/">João</a>
+                </p>
             </div>
         </footer>
     </div>
 
     <script src="js/scripts.js"></script>
-
 </body>
 </html>
